--- a/index.njk
+++ b/index.njk
@@ -129,7 +129,7 @@ layout: layouts/base.njk
       </ul> #}
     </div>
 
-    <div class="relative z-10 p-6">
+    <div class="md:hidden relative z-10 p-6">
       <ul class="flex items-center gap-5">
         <li class="flex items-center">
           <a href="#" class="font-medium text-sm text-[black] hover:text-[black]/80 duration-200">Published</a>
