--- a/index.njk
+++ b/index.njk
@@ -33,7 +33,7 @@ layout: layouts/base.njk
       </li>
     </ul>
 
-    <div class="flex-1 flex justify-end">
+    <div class="md:hidden flex-1 flex justify-end">
       <ul class="flex items-center gap-5">
         <li class="hidden md:flex items-center">
           <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">About</a>
