--- a/index.njk
+++ b/index.njk
@@ -33,7 +33,7 @@ layout: layouts/base.njk
       </li>
     </ul>
 
-    <div class="md:hidden flex-1 flex justify-end">
+    <div class="flex-1 flex justify-end">
       <ul class="flex items-center gap-5">
         <li class="hidden md:flex items-center">
           <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">About</a>
@@ -72,7 +72,7 @@ layout: layouts/base.njk
     </div>
   </div>
 
-  <div class="fixed z-20 right-0 bottom-0 mb-8 mr-8 flex items-center">
+  <div class="hidden md:flex fixed z-20 right-0 bottom-0 mb-8 mr-8 items-center">
     <div class="rounded-md bg-white/[.85] shadow-lg">
       <ul class="flex items-center gap-4 px-4">
         <li class="flex items-center">
@@ -90,8 +90,6 @@ layout: layouts/base.njk
             <svg class="fill-current w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M192 32H0V224H192V32zm0 256H0V480H192V288zM256 32V224H448V32H256zM448 288H256V480H448V288z"/></svg>
           </a>
         </li>
-        
-        
       </ul>
     </div>
   </div>
