--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1627,6 +1627,10 @@ video {
     position: absolute;
   }
 
+  .md\:left-1\/2 {
+    left: 50%;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1641,6 +1645,15 @@ video {
 
   .md\:w-\[640px\] {
     width: 640px;
+  }
+
+  .md\:w-auto {
+    width: auto;
+  }
+
+  .md\:translate-x-\[-50\%\] {
+    --tw-translate-x: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .md\:grid-cols-3 {
