--- a/index.njk
+++ b/index.njk
@@ -53,20 +53,26 @@ layout: layouts/base.njk
     </div>
   </header>
 
-  <div class="fixed z-20 left-1/2 translate-x-[-50%] bottom-0 mb-8 flex items-center">
-    <div class="rounded-md bg-black/[.85] shadow-lg">
-      <ul class="flex items-center gap-5 px-6">
+  <div class="fixed z-20 md:left-1/2 md:translate-x-[-50%] bottom-0 mb-8 px-4 overflow-auto w-full md:w-auto md:flex items-center">
+    <div class="rounded-md bg-black/[.85] shadow-lg overflow-auto">
+      <ul class="flex items-center gap-5 px-6 whitespace-nowrap">
         <li class="flex items-center">
           <a href="#" class="h-[42px] flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">All</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Digital</a>
+          <a href="#" class="h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Product</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Identity</a>
+          <a href="#" class="h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
+        </li>
+        <li class="flex items-center">
+          <a href="#" class="h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Branding</a>
         </li>
         <li class="flex items-center">
           <a href="#" class="h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Art Direction</a>
+        </li>
+        <li class="flex items-center">
+          <a href="#" class="h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
         </li>
       </ul>
     </div>
