--- a/index.njk
+++ b/index.njk
@@ -114,7 +114,7 @@ layout: layouts/base.njk
       </div>
     </div>
 
-    <div class="md:hidden relative z-10 w-full p-6 pb-6 mix-blend-overlay">
+    <div class="md:hidden relative z-10 w-full p-6 pb-14 mix-blend-overlay">
       <h1 class="text-white mb-6 text-4xl font-regular">
         The Curious Life of Design and Wonder
       </h1>
@@ -133,7 +133,7 @@ layout: layouts/base.njk
       </ul> #}
     </div>
 
-    <div class="md:hidden relative z-10 p-6">
+    {# <div class="md:hidden relative z-10 p-6">
       <ul class="flex items-center gap-5">
         <li class="flex items-center">
           <a href="#" class="font-medium text-sm text-[black] hover:text-[black]/80 duration-200">Published</a>
@@ -142,7 +142,7 @@ layout: layouts/base.njk
           <a href="#" class="font-medium text-sm text-[black]/30 hover:text-[black]/80 duration-200">Work in Progress</a>
         </li>
       </ul>
-    </div>
+    </div> #}
 
     <div class="hidden md:block absolute left-1/2 translate-x-[-50%] md:text-center w-full max-w-[780px] p-6 mix-blend-overlay text-black text-base md:text-xl leading-snug md:leading-7">
       Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
