--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -638,6 +638,10 @@ video {
   margin-right: 2rem;
 }
 
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
 .block {
   display: block;
 }
@@ -724,6 +728,10 @@ video {
 
 .h-\[576px\] {
   height: 576px;
+}
+
+.h-\[48px\] {
+  height: 48px;
 }
 
 .max-h-\[800px\] {
@@ -953,6 +961,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-l-3xl {
   border-top-left-radius: 1.5rem;
   border-bottom-left-radius: 1.5rem;
@@ -1139,6 +1151,10 @@ video {
 
 .pb-14 {
   padding-bottom: 3.5rem;
+}
+
+.pr-6 {
+  padding-right: 1.5rem;
 }
 
 .text-center {
@@ -1651,6 +1667,10 @@ video {
     display: none;
   }
 
+  .md\:h-\[42px\] {
+    height: 42px;
+  }
+
   .md\:w-\[640px\] {
     width: 640px;
   }
@@ -1686,6 +1706,10 @@ video {
 
   .md\:justify-center {
     justify-content: center;
+  }
+
+  .md\:rounded-md {
+    border-radius: 0.375rem;
   }
 
   .md\:px-8 {
