--- a/index.njk
+++ b/index.njk
@@ -103,7 +103,7 @@ layout: layouts/base.njk
 
   <div class="relative flex flex-col md:flex-row md:items-center justify-end md:justify-center overflow-hidden h-[85vh] max-h-[600px] xl:max-h-[800px] pt-9">
     
-    <div class="absolute w-[512px] h-[512px] flex items-center justify-center blur-2xl">
+    <div class="absolute w-[640px] md:w-[512px] h-[640px] md:h-[512px] flex items-center justify-center blur-2xl">
       <div class="absolute w-[100%] h-[100%] rounded-full gsap-glowfly-outer">
         <div class="absolute w-[95%] h-[95%] bg-[#6EA3AE]/60 rounded-full transform scale-[0.8] gsap-glowfly-inner">
           <div class="absolute w-[90%] h-[90%] bg-[#D4F0FF]/60 rounded-full transform scale-[0.6]">
