--- a/index.njk
+++ b/index.njk
@@ -101,13 +101,13 @@ layout: layouts/base.njk
   </div>
   
 
-  <div class="relative flex flex-col md:flex-row items-center md:items-center justify-end md:justify-center overflow-hidden h-[85vh] max-h-[600px] xl:max-h-[800px] pt-9">
+  <div class="relative flex flex-col md:flex-row items-center md:items-center justify-end md:justify-center overflow-hidden h-[85vh] max-h-[512px] xl:max-h-[800px] pt-9">
     
     <div class="absolute w-[640px] md:w-[512px] h-[640px] md:h-[512px] flex items-center justify-center blur-2xl">
       <div class="absolute w-[100%] h-[100%] rounded-full gsap-glowfly-outer">
-        <div class="absolute w-[95%] h-[95%] bg-[#6EA3AE]/60 rounded-full transform scale-[0.8] gsap-glowfly-inner">
-          <div class="absolute w-[90%] h-[90%] bg-[#D4F0FF]/60 rounded-full transform scale-[0.6]">
-            <div class="absolute w-[60%] h-[60%] bg-[#D4F0FF]/80 rounded-full transform scale-[0.6]">
+        <div class="absolute w-[90%] h-[90%] bg-[#6EA3AE]/80 rounded-full transform scale-[0.8] mix-blend-overlay gsap-glowfly-inner-1">
+          <div class="absolute w-[90%] h-[90%] bg-[#D4F0FF]/20 rounded-full transform scale-[0.6] gsap-glowfly-inner-2">
+            <div class="absolute w-[60%] h-[60%] bg-[#D4F0FF]/100 rounded-full transform scale-[0.6] sap-glowfly-inner-2">
             </div>
           </div>
         </div>
@@ -115,12 +115,12 @@ layout: layouts/base.njk
     </div>
 
     <div class="md:hidden relative z-10 w-full p-6 pb-14 mix-blend-overlay">
-      <h1 class="text-white mb-6 text-4xl font-regular">
+      <h1 class="text-white mb-6 text-3xl leading-8 font-medium">
         The Curious Life of Design and Wonder
       </h1>
 
       <h3 class="md:absolute left-1/2 md:text-center w-full max-w-[780px] text-black text-base md:text-xl leading-snug md:leading-7">
-        Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
+        Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is.
       </h3>
 
       {# <ul class="flex items-center gap-5">
@@ -144,8 +144,8 @@ layout: layouts/base.njk
       </ul>
     </div> #}
 
-    <div class="hidden md:block absolute left-1/2 translate-x-[-50%] md:text-center w-full max-w-[780px] p-6 mix-blend-overlay text-black text-base md:text-xl leading-snug md:leading-7">
-      Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
+    <div class="hidden md:block absolute left-1/2 translate-x-[-50%] md:text-center w-full max-w-[700px] p-6 mix-blend-overlay text-black text-base md:text-xl leading-snug md:leading-7">
+      Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is.
     </div>
     {# <div class="absolute left-1/2 translate-x-[-50%] md:text-center w-full max-w-[780px] p-6 text-black/[.12] text-base md:text-xl leading-snug md:leading-7">
       Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
