--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -642,6 +642,10 @@ video {
   margin-right: 1.5rem;
 }
 
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
 .block {
   display: block;
 }
@@ -750,6 +754,14 @@ video {
   height: 70%;
 }
 
+.h-\[60px\] {
+  height: 60px;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
 .max-h-\[800px\] {
   max-height: 800px;
 }
@@ -828,6 +840,18 @@ video {
 
 .w-\[70\%\] {
   width: 70%;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-\[x\] {
+  width: x;
+}
+
+.w-px {
+  width: 1px;
 }
 
 .max-w-\[400px\] {
@@ -966,6 +990,14 @@ video {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-7 {
+  gap: 1.75rem;
 }
 
 .gap-x-8 {
@@ -1120,6 +1152,22 @@ video {
   background-color: rgb(110 163 174 / 0.8);
 }
 
+.bg-white\/10 {
+  background-color: rgb(255 255 255 / 0.1);
+}
+
+.bg-white\/40 {
+  background-color: rgb(255 255 255 / 0.4);
+}
+
+.bg-white\/20 {
+  background-color: rgb(255 255 255 / 0.2);
+}
+
+.bg-white\/50 {
+  background-color: rgb(255 255 255 / 0.5);
+}
+
 .fill-current {
   fill: currentColor;
 }
@@ -1223,6 +1271,10 @@ video {
 
 .pr-6 {
   padding-right: 1.5rem;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
 }
 
 .text-center {
@@ -1437,6 +1489,10 @@ video {
 
 .text-\[black\]\/30 {
   color: rgb(0 0 0 / 0.3);
+}
+
+.text-black\/80 {
+  color: rgb(0 0 0 / 0.8);
 }
 
 .antialiased {
@@ -1732,6 +1788,10 @@ video {
     left: 50%;
   }
 
+  .md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1750,6 +1810,10 @@ video {
 
   .md\:h-\[512px\] {
     height: 512px;
+  }
+
+  .md\:h-\[48px\] {
+    height: 48px;
   }
 
   .md\:w-\[640px\] {
@@ -1793,13 +1857,30 @@ video {
     justify-content: center;
   }
 
+  .md\:gap-5 {
+    gap: 1.25rem;
+  }
+
   .md\:rounded-md {
     border-radius: 0.375rem;
+  }
+
+  .md\:rounded-xl {
+    border-radius: 0.75rem;
+  }
+
+  .md\:bg-black\/\[\.85\] {
+    background-color: rgb(0 0 0 / .85);
   }
 
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .md\:pt-0 {
@@ -1821,6 +1902,10 @@ video {
 
   .md\:leading-7 {
     line-height: 1.75rem;
+  }
+
+  .md\:text-black\/60 {
+    color: rgb(0 0 0 / 0.6);
   }
 }
 
