--- a/index.njk
+++ b/index.njk
@@ -21,30 +21,23 @@ layout: layouts/base.njk
       The Curious Life of Design and Wonder
     </div>
 
-    <ul class="flex md:hidden items-center gap-5">
-      <li class="flex items-center">
-        <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">About</a>
-      </li>
-      <li class="flex items-center">
-        <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">CV</a>
-      </li>
-      <li class="flex items-center">
-        <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">Twitter</a>
-      </li>
-    </ul>
+
 
     <div class="flex-1 flex justify-end">
       <ul class="flex items-center gap-5">
-        <li class="hidden md:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">About</a>
+        <li class="flex items-center">
+          <a href="#" class="font-medium text-sm text-black/80 md:text-black/60 hover:text-black/80 duration-200">About</a>
         </li>
         <li class="hidden md:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">CV</a>
+          <a href="#" class="font-medium text-sm text-black/80 md:text-black/60 hover:text-black/80 duration-200">CV</a>
         </li>
         <li class="hidden md:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">Twitter</a>
+          <a href="#" class="font-medium text-sm text-black/80 md:text-black/60 hover:text-black/80 duration-200">Twitter</a>
         </li>
-        <li class="flex items-center ml-2">
+        <li class="flex items-center">
+          <a href="#" class="font-medium text-sm text-black/80 md:text-black/60 hover:text-black/80 duration-200">Github</a>
+        </li>
+        <li class="flex items-center ml-1">
           <button class="w-4 h-4 rounded-full overflow-hidden border border-black">
             <div class="w-[8px] h-4 bg-black"></div>
           </button>
@@ -53,26 +46,37 @@ layout: layouts/base.njk
     </div>
   </header>
 
-  <div class="fixed z-20 md:left-1/2 md:translate-x-[-50%] bottom-0 mb-8 px-6 overflow-auto w-full md:w-auto md:flex items-center">
-    <div class="rounded-xl md:rounded-md bg-black/[.85] shadow-lg overflow-auto">
-      <ul class="flex items-center gap-5 whitespace-nowrap px-6 overflow-auto">
+  <div class="fixed z-20 md:left-1/2 md:translate-x-[-50%] bottom-0 md:mb-8 md:px-6 overflow-auto w-full md:w-auto md:flex items-center">
+    <div class="flex items-center md:rounded-xl md:rounded-md bg-black md:bg-black/[.85] shadow-lg overflow-auto">
+      <ul class="flex-none flex items-center gap-6 md:gap-5 whitespace-nowrap pl-6">
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">All</a>
+          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">Published</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Product</a>
+          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">WIP</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
+          <div class="w-px h-6 bg-white/40"></div>
+        </li>
+      </ul>
+      <ul class="flex items-center gap-6 md:gap-5 whitespace-nowrap px-6 overflow-auto">
+        <li class="flex items-center">
+          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">All</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Branding</a>
+          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Product</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Art Direction</a>
+          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
+          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Branding</a>
+        </li>
+        <li class="flex items-center">
+          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Art Direction</a>
+        </li>
+        <li class="flex items-center">
+          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
         </li>
       </ul>
     </div>
@@ -101,7 +105,7 @@ layout: layouts/base.njk
   </div>
   
 
-  <div class="relative flex flex-col md:flex-row items-center md:items-center justify-end md:justify-center overflow-hidden h-[85vh] max-h-[512px] xl:max-h-[800px] pt-9">
+  <div class="relative flex flex-col md:flex-row items-center md:items-center justify-end md:justify-center overflow-hidden h-[85vh] max-h-[600px] xl:max-h-[800px] pt-9">
     
     <div class="absolute w-[640px] md:w-[512px] h-[640px] md:h-[512px] flex items-center justify-center blur-2xl">
       <div class="absolute w-[100%] h-[100%] rounded-full gsap-glowfly-outer">
