--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -762,6 +762,10 @@ video {
   height: 1.25rem;
 }
 
+.h-7 {
+  height: 1.75rem;
+}
+
 .max-h-\[800px\] {
   max-height: 800px;
 }
@@ -1166,6 +1170,11 @@ video {
 
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}
+
+.bg-\[\#4F4F4F\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 79 79 / var(--tw-bg-opacity));
 }
 
 .fill-current {
