--- a/index.njk
+++ b/index.njk
@@ -56,7 +56,7 @@ layout: layouts/base.njk
           <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">WIP</a>
         </li>
         <li class="flex items-center">
-          <div class="w-px h-6 bg-white/40"></div>
+          <div class="w-px h-7 bg-[#4F4F4F]"></div>
         </li>
       </ul>
       <ul class="flex items-center gap-6 md:gap-5 whitespace-nowrap px-6 overflow-auto">
