--- a/index.njk
+++ b/index.njk
@@ -67,16 +67,16 @@ layout: layouts/base.njk
           <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Product</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
+          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">UI/UX</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Branding</a>
+          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Identity</a>
+        </li>
+        <li class="flex items-center">
+          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
         </li>
         <li class="flex items-center">
           <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Art Direction</a>
-        </li>
-        <li class="flex items-center">
-          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
         </li>
       </ul>
     </div>
