--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -786,6 +786,14 @@ video {
   max-height: 448px;
 }
 
+.max-h-\[500px\] {
+  max-height: 500px;
+}
+
+.max-h-\[480px\] {
+  max-height: 480px;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -1199,6 +1207,10 @@ video {
 
 .p-24 {
   padding: 6rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-4 {
@@ -1888,6 +1900,10 @@ video {
 
   .md\:bg-black\/\[\.85\] {
     background-color: rgb(0 0 0 / .85);
+  }
+
+  .md\:p-6 {
+    padding: 1.5rem;
   }
 
   .md\:px-8 {
