--- a/index.njk
+++ b/index.njk
@@ -123,7 +123,7 @@ layout: layouts/base.njk
         The Curious Life of Design and Wonder
       </h1>
 
-      <h3 class="md:absolute left-1/2 md:text-center w-full max-w-[780px] text-black text-base md:text-xl leading-snug md:leading-7">
+      <h3 class="md:absolute left-1/2 md:text-center w-full text-black text-lg md:text-xl leading-snug md:leading-7">
         Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is.
       </h3>
 
