--- a/index.njk
+++ b/index.njk
@@ -119,8 +119,9 @@ layout: layouts/base.njk
     </div>
 
     <div class="md:hidden relative z-10 w-full p-6 pb-10 mix-blend-overlay">
-      <h1 class="text-white mb-6 text-3xl leading-8 font-medium">
-        The Curious Life of Design and Wonder
+      <h1 class="text-white mb-5 text-2xl leading-8 font-medium">
+        © Selected Works
+        {# <sup class="text-sm ml-1 opacity-70">08–23</sup> #}
       </h1>
 
       <h3 class="md:absolute left-1/2 md:text-center w-full text-black text-lg md:text-xl leading-snug md:leading-7">
