--- a/index.njk
+++ b/index.njk
@@ -17,6 +17,23 @@ layout: layouts/base.njk
       </ul>
     </div>
 
+    <div class="flex-1 flex md:hidden justify-end">
+      <ul class="flex items-center gap-5">
+        <li class="flex items-center">
+          <a href="#" class="font-medium text-sm text-black/60 hover:text-black/80 duration-200">About</a>
+        </li>
+        <li class="flex items-center">
+          <a href="#" class="font-medium text-sm text-black/60 hover:text-black/80 duration-200">CV</a>
+        </li>
+        <li class="flex items-center">
+          <a href="#" class="font-medium text-sm text-black/60 hover:text-black/80 duration-200">Twitter</a>
+        </li>
+        <li class="flex items-center">
+          <a href="#" class="font-medium text-sm text-black/60 hover:text-black/80 duration-200">Github</a>
+        </li>
+      </ul>
+    </div>
+
     <div class="hidden md:block font-medium text-base leading-none text-[#444444]">
       The Curious Life of Design and Wonder
     </div>
@@ -25,17 +42,17 @@ layout: layouts/base.njk
 
     <div class="flex-1 flex justify-end">
       <ul class="flex items-center gap-5">
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-black/80 md:text-black/60 hover:text-black/80 duration-200">About</a>
+        <li class="hidden md:flex items-center">
+          <a href="#" class="font-medium text-sm text-black/60 hover:text-black/80 duration-200">About</a>
         </li>
         <li class="hidden md:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/80 md:text-black/60 hover:text-black/80 duration-200">CV</a>
+          <a href="#" class="font-medium text-sm text-black/60 hover:text-black/80 duration-200">CV</a>
         </li>
         <li class="hidden md:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/80 md:text-black/60 hover:text-black/80 duration-200">Twitter</a>
+          <a href="#" class="font-medium text-sm text-black/60 hover:text-black/80 duration-200">Twitter</a>
         </li>
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-black/80 md:text-black/60 hover:text-black/80 duration-200">Github</a>
+        <li class="hidden md:flex items-center">
+          <a href="#" class="font-medium text-sm text-black/60 hover:text-black/80 duration-200">Github</a>
         </li>
         <li class="flex items-center ml-1">
           <button class="w-4 h-4 rounded-full overflow-hidden border border-black">
