--- a/index.njk
+++ b/index.njk
@@ -64,18 +64,7 @@ layout: layouts/base.njk
   </header>
 
   <div class="fixed z-20 md:left-1/2 md:translate-x-[-50%] bottom-0 md:mb-8 md:px-6 overflow-auto w-full md:w-auto md:flex items-center">
-    <div class="flex items-center md:rounded-xl md:rounded-md bg-black md:bg-black/[.85] shadow-lg overflow-auto">
-      <ul class="flex-none flex items-center gap-6 md:gap-5 whitespace-nowrap pl-6">
-        <li class="flex items-center">
-          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">Published</a>
-        </li>
-        <li class="flex items-center">
-          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">WIP</a>
-        </li>
-        <li class="flex items-center">
-          <div class="w-px h-7 bg-[#4F4F4F]"></div>
-        </li>
-      </ul>
+    <div class="flex items-center rounded-md bg-black shadow-lg overflow-auto">
       <ul class="flex items-center gap-6 md:gap-5 whitespace-nowrap px-6 overflow-auto">
         <li class="flex items-center">
           <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">All</a>
@@ -100,7 +89,7 @@ layout: layouts/base.njk
   </div>
 
   <div class="hidden md:flex fixed z-20 right-0 bottom-0 mb-8 mr-8 items-center">
-    <div class="rounded-md bg-white/[.85] shadow-lg">
+    <div class="rounded-md bg-white shadow-lg">
       <ul class="flex items-center gap-4 px-4">
         <li class="flex items-center">
           <a href="#" class="h-[42px] flex items-center font-medium text-sm text-black/40 hover:text-black/80 duration-200">
@@ -124,7 +113,7 @@ layout: layouts/base.njk
 
   <div class="relative flex flex-col md:flex-row items-center md:items-center justify-end md:justify-center overflow-hidden h-[85vh] max-h-[480px] xl:max-h-[800px] pt-9">
     
-    <div class="absolute w-[400px] md:w-[512px] h-[400px] md:h-[512px] flex items-center justify-center blur-2xl">
+    {# <div class="absolute w-[400px] md:w-[512px] h-[400px] md:h-[512px] flex items-center justify-center blur-2xl">
       <div class="absolute w-[100%] h-[100%] rounded-full gsap-glowfly-outer">
         <div class="absolute w-[90%] h-[90%] bg-[#6EA3AE]/80 rounded-full transform scale-[0.8] mix-blend-overlay gsap-glowfly-inner-1">
           <div class="absolute w-[90%] h-[90%] bg-[#D4F0FF]/20 rounded-full transform scale-[0.6] gsap-glowfly-inner-2">
@@ -133,26 +122,18 @@ layout: layouts/base.njk
           </div>
         </div>
       </div>
-    </div>
+    </div> #}
 
-    <div class="md:hidden relative z-10 w-full p-6 pb-10 mix-blend-overlay">
-      <h1 class="text-white mb-5 text-2xl leading-8 font-medium">
-        © Selected Works
-        {# <sup class="text-sm ml-1 opacity-70">08–23</sup> #}
-      </h1>
+    <div class="gsap-glow absolute bottom-[-75%] w-[30%] h-[150%] flex items-center justify-center rounded-[100%] blur-[80px] bg-[#F1B08C]"></div>
+    <div class="gsap-glow absolute bottom-[-50%] w-[80%] h-[100%] flex items-center justify-center rounded-[100%] blur-[80px] bg-[#9392C8]"></div>
 
-      <h3 class="md:absolute left-1/2 md:text-center w-full text-black text-lg md:text-xl leading-snug md:leading-7">
-        Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is.
+    <div class="gsap-glow absolute bottom-[-25%] w-[110%] h-[50%] flex items-center justify-center rounded-[100%] blur-[100px] bg-[#59A4BB]"></div>
+    <div class="gsap-glow absolute bottom-[-10%] w-[60%] h-[20%] flex items-center justify-center rounded-[100%] blur-[100px] bg-[#000000]"></div>
+
+    <div class="absolute bottom-0 left-0 mb-8 ml-8 z-20">
+      <h3 class="max-w-[640px] text-white/70 text-base leading-snug">
+        <span class="text-white/95 font-medium mr-1">Throughout Journey (2023)</span> is a 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte... <a href="#" class="text-white/95 font-medium hover:underline ml-1">Read full story</a>
       </h3>
-
-      {# <ul class="flex items-center gap-5">
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-base text-[white] hover:text-[white]/80 duration-200">Published</a>
-        </li>
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-base text-[white]/60 hover:text-[white]/80 duration-200">Work in Progress</a>
-        </li>
-      </ul> #}
     </div>
 
     {# <div class="md:hidden relative z-10 p-6">
@@ -166,9 +147,9 @@ layout: layouts/base.njk
       </ul>
     </div> #}
 
-    <div class="hidden md:block absolute left-1/2 translate-x-[-50%] md:text-center w-full max-w-[700px] p-6 mix-blend-overlay text-black text-base md:text-xl leading-snug md:leading-7">
+    {# <div class="hidden md:block absolute left-1/2 translate-x-[-50%] md:text-center w-full max-w-[700px] p-6 mix-blend-overlay text-black text-base md:text-xl leading-snug md:leading-7">
       Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is.
-    </div>
+    </div> #}
     {# <div class="absolute left-1/2 translate-x-[-50%] md:text-center w-full max-w-[780px] p-6 text-black/[.12] text-base md:text-xl leading-snug md:leading-7">
       Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
     </div> #}
