--- a/index.njk
+++ b/index.njk
@@ -124,15 +124,17 @@ layout: layouts/base.njk
       </div>
     </div> #}
 
-    <div class="gsap-glow absolute bottom-[-75%] w-[30%] h-[150%] flex items-center justify-center rounded-[100%] blur-[80px] bg-[#F1B08C]"></div>
-    <div class="gsap-glow absolute bottom-[-50%] w-[80%] h-[100%] flex items-center justify-center rounded-[100%] blur-[80px] bg-[#9392C8]"></div>
-
-    <div class="gsap-glow absolute bottom-[-25%] w-[110%] h-[50%] flex items-center justify-center rounded-[100%] blur-[100px] bg-[#59A4BB]"></div>
-    <div class="gsap-glow absolute bottom-[-10%] w-[60%] h-[20%] flex items-center justify-center rounded-[100%] blur-[100px] bg-[#000000]"></div>
+    <div class="relative w-[400px] aspect-[3/4] flex justify-center blur-[60px]">
+      <div class="absolute bottom-[10%] w-[50%] h-[90%] flex-none rounded-[100%] blurx-[80px] bg-[#E6AC8C]"></div>
+      <div class="absolute bottom-[10%] w-[70%] h-[75%] flex-none rounded-[100%] blurx-[80px] bg-[#817FC8]/60"></div>
+      <div class="absolute bottom-[0%] w-[50%] h-[60%] flex-none rounded-[100%] blurx-[80px] bg-[#1DB2C6]/60"></div>
+      <div class="absolute bottom-[10%] w-[25%] h-[40%] flex-none rounded-[100%] blurx-[80px] bg-[#ffffff]/100"></div>
+      
+    </div>
 
     <div class="absolute bottom-0 left-0 mb-8 ml-8 z-20">
-      <h3 class="max-w-[640px] text-white/70 text-base leading-snug">
-        <span class="text-white/95 font-medium mr-1">Throughout Journey (2023)</span> is a 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte... <a href="#" class="text-white/95 font-medium hover:underline ml-1">Read full story</a>
+      <h3 class="max-w-[640px] text-black/50 text-base leading-snug">
+        <span class="text-black/95 font-medium mr-1">Throughout Journey (2023)</span> is a 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte... <a href="#" class="text-black/95 font-medium hover:underline ml-1">Read full story</a>
       </h3>
     </div>
 
