--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -922,6 +922,10 @@ video {
   height: 30%;
 }
 
+.h-3 {
+  height: 0.75rem;
+}
+
 .max-h-\[800px\] {
   max-height: 800px;
 }
@@ -1082,6 +1086,18 @@ video {
   width: 25%;
 }
 
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-\[320px\] {
+  width: 320px;
+}
+
+.w-\[220px\] {
+  width: 220px;
+}
+
 .max-w-\[400px\] {
   max-width: 400px;
 }
@@ -1190,6 +1206,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-end {
@@ -1962,6 +1982,18 @@ video {
   transition-duration: 0.6s;
 }
 
+.duration-\[\.4s\] {
+  transition-duration: .4s;
+}
+
+.duration-\[400\] {
+  transition-duration: 400;
+}
+
+.duration-\[400ms\] {
+  transition-duration: 400ms;
+}
+
 /* @import '../libraries/fontawesome/css/light.min.css';
 @import '../libraries/fontawesome/css/regular.min.css'; */
 
@@ -2037,6 +2069,30 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:scale-50:hover {
+  --tw-scale-x: .5;
+  --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-\[1\.2\]:hover {
+  --tw-scale-x: 1.2;
+  --tw-scale-y: 1.2;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-\[1\.1\]:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-\[1\.05\]:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:bg-slate-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
@@ -2088,6 +2144,10 @@ video {
 
 .hover\:underline:hover {
   text-decoration-line: underline;
+}
+
+.hover\:opacity-100:hover {
+  opacity: 1;
 }
 
 .focus\:border-emerald-500:focus {
@@ -2207,6 +2267,10 @@ video {
     width: 512px;
   }
 
+  .md\:w-\[400px\] {
+    width: 400px;
+  }
+
   .md\:translate-x-\[-50\%\] {
     --tw-translate-x: -50%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2293,8 +2357,32 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:ml-1 {
+    margin-left: 0.25rem;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:w-\[400px\] {
+    width: 400px;
+  }
+
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .lg\:px-0 {
@@ -2306,5 +2394,43 @@ video {
 @media (min-width: 1280px) {
   .xl\:max-h-\[800px\] {
     max-height: 800px;
+  }
+
+  .xl\:max-h-\[85vh\] {
+    max-height: 85vh;
+  }
+
+  .xl\:max-h-\[70vh\] {
+    max-height: 70vh;
+  }
+
+  .xl\:max-h-\[80vh\] {
+    max-height: 80vh;
+  }
+
+  .xl\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .xl\:grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-7 {
+    grid-template-columns: repeat(7, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .\32xl\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 }
