--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -954,6 +954,10 @@ video {
   max-height: 480px;
 }
 
+.max-h-\[640px\] {
+  max-height: 640px;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -1096,6 +1100,22 @@ video {
 
 .w-\[220px\] {
   width: 220px;
+}
+
+.w-\[280px\] {
+  width: 280px;
+}
+
+.w-\[160px\] {
+  width: 160px;
+}
+
+.w-\[192px\] {
+  width: 192px;
+}
+
+.w-\[240px\] {
+  width: 240px;
 }
 
 .max-w-\[400px\] {
@@ -1950,6 +1970,36 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.blur-\[40vh\] {
+  --tw-blur: blur(40vh);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.blur-\[20vh\] {
+  --tw-blur: blur(20vh);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.blur-\[10vh\] {
+  --tw-blur: blur(10vh);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.blur-\[4vh\] {
+  --tw-blur: blur(4vh);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.blur-\[2vh\] {
+  --tw-blur: blur(2vh);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.blur-\[3vh\] {
+  --tw-blur: blur(3vh);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -2271,6 +2321,10 @@ video {
     width: 400px;
   }
 
+  .md\:w-\[280px\] {
+    width: 280px;
+  }
+
   .md\:translate-x-\[-50\%\] {
     --tw-translate-x: -50%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2320,6 +2374,10 @@ video {
     padding: 1.5rem;
   }
 
+  .md\:p-8 {
+    padding: 2rem;
+  }
+
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -2353,6 +2411,11 @@ video {
 
   .md\:text-black\/60 {
     color: rgb(0 0 0 / 0.6);
+  }
+
+  .md\:blur-\[4vh\] {
+    --tw-blur: blur(4vh);
+    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   }
 }
 
