--- a/index.njk
+++ b/index.njk
@@ -26,9 +26,6 @@ layout: layouts/base.njk
           <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">CV</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">Twitter</a>
-        </li>
-        <li class="flex items-center">
           <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">Github</a>
         </li>
       </ul>
@@ -69,9 +66,9 @@ layout: layouts/base.njk
     </div>
   </header>
 
-  <div class="fixed z-20 md:left-1/2 md:translate-x-[-50%] bottom-0 md:mb-8 md:px-6 overflow-auto w-full md:w-auto md:flex items-center">
+  <div class="fixed z-20 left-1/2 translate-x-[-50%] bottom-0 mb-6 md:mb-8 px-6 overflow-auto w-full md:w-auto flex items-center">
     <div class="flex items-center rounded-md bg-black shadow-lg overflow-auto">
-      <ul class="flex items-center gap-6 md:gap-5 whitespace-nowrap px-6 overflow-auto">
+      <ul class="flex items-center gap-5 whitespace-nowrap px-6 overflow-auto">
         <li class="flex items-center">
           <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">All</a>
         </li>
@@ -117,7 +114,7 @@ layout: layouts/base.njk
   </div>
   
 
-  <div class="relative flex flex-col md:flex-row items-center md:items-center justify-end md:justify-center overflow-hidden h-[85vh] max-h-[480px] xl:max-h-[80vh] pt-9">
+  <div class="relative flex items-center justify-center overflow-hidden h-[85vh] max-h-[640px] xl:max-h-[80vh] pt-9">
     
     {# <div class="absolute w-[400px] md:w-[512px] h-[400px] md:h-[512px] flex items-center justify-center blur-2xl">
       <div class="absolute w-[100%] h-[100%] rounded-full gsap-glowfly-outer">
@@ -130,17 +127,17 @@ layout: layouts/base.njk
       </div>
     </div> #}
 
-    <div class="relative w-[320px] 2xl:w-[400px] aspect-[3/4] flex justify-center blur-[60px]">
-      <div class="absolute bottom-[10%] w-[50%] h-[90%] flex-none rounded-[100%] blurx-[80px] bg-[#E6AC8C]"></div>
-      <div class="absolute bottom-[10%] w-[70%] h-[75%] flex-none rounded-[100%] blurx-[80px] bg-[#817FC8]/60"></div>
-      <div class="absolute bottom-[0%] w-[50%] h-[60%] flex-none rounded-[100%] blurx-[80px] bg-[#1DB2C6]/60"></div>
-      <div class="absolute bottom-[10%] w-[25%] h-[40%] flex-none rounded-[100%] blurx-[80px] bg-[#ffffff]/100"></div>
+    <div class="relative flex-none w-[240px] md:w-[280px] 2xl:w-[400px] aspect-[3/4] flex justify-center blur-[4vh] md:blur-[4vh]">
+      <div class="absolute bottom-[10%] w-[50%] h-[90%] flex-none rounded-[100%] bg-[#E6AC8C]"></div>
+      <div class="absolute bottom-[10%] w-[70%] h-[75%] flex-none rounded-[100%] bg-[#817FC8]/60"></div>
+      <div class="absolute bottom-[0%] w-[50%] h-[60%] flex-none rounded-[100%] bg-[#1DB2C6]/60"></div>
+      <div class="absolute bottom-[10%] w-[25%] h-[40%] flex-none rounded-[100%] bg-[#ffffff]/100"></div>
       
     </div>
 
-    <div class="absolute bottom-0 left-0 mb-8 ml-8 z-20">
-      <h3 class="max-w-[640px] text-black/50 text-base leading-snug">
-        <span class="text-black/50 font-medium mr-1">Throughout Journey (2023)</span> is a 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte... <a href="#" class="text-black/50 font-medium hover:underline ml-1">Read full story</a>
+    <div class="absolute bottom-0 left-0 p-6 md:p-8 z-20">
+      <h3 class="max-w-[640px] text-black/50 text-base font-regular leading-snug">
+        <span class="text-black/80 font-medium mr-1">Throughout Journey (2023)</span> is a 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte... <a href="#" class="text-black/80 font-medium hover:underline ml-1">Read full story</a>
       </h3>
     </div>
 
