--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1613,6 +1613,14 @@ video {
   padding-left: 1.5rem;
 }
 
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
 .text-center {
   text-align: center;
 }
