--- a/index.njk
+++ b/index.njk
@@ -68,24 +68,24 @@ layout: layouts/base.njk
 
   <div class="fixed z-20 left-1/2 translate-x-[-50%] bottom-0 mb-6 md:mb-8 px-6 overflow-auto w-full md:w-auto flex items-center">
     <div class="flex items-center rounded-md bg-black shadow-lg overflow-auto">
-      <ul class="flex items-center gap-5 whitespace-nowrap px-6 overflow-auto">
+      <ul class="flex items-center whitespace-nowrap pl-5">
         <li class="flex items-center">
-          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">All</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">All</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Product</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Product</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">UI/UX</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">UI/UX</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Identity</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Identity</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[60px] md:h-[48px] md:h-[42px] flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Art Direction</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-5 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Art Direction</a>
         </li>
       </ul>
     </div>
