--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -661,6 +661,18 @@ video {
   z-index: 30;
 }
 
+.z-40 {
+  z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.z-\[60\] {
+  z-index: 60;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -744,6 +756,30 @@ video {
 
 .mr-1 {
   margin-right: 0.25rem;
+}
+
+.ml-\[5\%\] {
+  margin-left: 5%;
+}
+
+.mt-\[5\%\] {
+  margin-top: 5%;
+}
+
+.ml-\[15\%\] {
+  margin-left: 15%;
+}
+
+.mt-\[15\%\] {
+  margin-top: 15%;
+}
+
+.ml-\[10\%\] {
+  margin-left: 10%;
+}
+
+.mt-\[10\%\] {
+  margin-top: 10%;
 }
 
 .block {
@@ -926,6 +962,30 @@ video {
   height: 0.75rem;
 }
 
+.h-\[320\] {
+  height: 320;
+}
+
+.h-\[320px\] {
+  height: 320px;
+}
+
+.h-\[50vh\] {
+  height: 50vh;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
+}
+
+.h-\[160px\] {
+  height: 160px;
+}
+
+.h-\[200\%\] {
+  height: 200%;
+}
+
 .max-h-\[800px\] {
   max-height: 800px;
 }
@@ -960,6 +1020,10 @@ video {
 
 .max-h-\[576px\] {
   max-height: 576px;
+}
+
+.max-h-\[50vh\] {
+  max-height: 50vh;
 }
 
 .w-10 {
@@ -1126,6 +1190,26 @@ video {
   width: 140px;
 }
 
+.w-\[180px\] {
+  width: 180px;
+}
+
+.w-\[320\] {
+  width: 320;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[200\%\] {
+  width: 200%;
+}
+
+.w-\[150\%\] {
+  width: 150%;
+}
+
 .max-w-\[400px\] {
   max-width: 400px;
 }
@@ -1152,6 +1236,10 @@ video {
 
 .max-w-\[700px\] {
   max-width: 700px;
+}
+
+.max-w-none {
+  max-width: none;
 }
 
 .flex-1 {
@@ -1324,6 +1412,26 @@ video {
 .rounded-l-3xl {
   border-top-left-radius: 1.5rem;
   border-bottom-left-radius: 1.5rem;
+}
+
+.rounded-br-full {
+  border-bottom-right-radius: 9999px;
+}
+
+.rounded-br-\[100\%\] {
+  border-bottom-right-radius: 100%;
+}
+
+.rounded-br-\[160px\] {
+  border-bottom-right-radius: 160px;
+}
+
+.rounded-bl-full {
+  border-bottom-left-radius: 9999px;
+}
+
+.rounded-tr-full {
+  border-top-right-radius: 9999px;
 }
 
 .border {
@@ -1506,6 +1614,30 @@ video {
 
 .bg-\[\#ffffff\]\/100 {
   background-color: rgb(255 255 255 / 1);
+}
+
+.bg-\[\#7A1B1B\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(122 27 27 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#2B3E6E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 62 110 / var(--tw-bg-opacity));
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-white {
+  --tw-gradient-from: #fff;
+  --tw-gradient-to: rgb(255 255 255 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-white\/0 {
+  --tw-gradient-to: rgb(255 255 255 / 0);
 }
 
 .fill-current {
@@ -2226,6 +2358,14 @@ video {
   --tw-ring-color: rgb(16 185 129 / var(--tw-ring-opacity));
 }
 
+.group\/thumb:hover .group-hover\/thumb\:ml-5 {
+  margin-left: 1.25rem;
+}
+
+.group\/thumb:hover .group-hover\/thumb\:ml-\[5\%\] {
+  margin-left: 5%;
+}
+
 .group\/thumbnail:hover .group-hover\/thumbnail\:translate-y-0 {
   --tw-translate-y: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2408,6 +2548,10 @@ video {
     padding-top: 0px;
   }
 
+  .md\:pt-9 {
+    padding-top: 2.25rem;
+  }
+
   .md\:text-center {
     text-align: center;
   }
@@ -2452,6 +2596,14 @@ video {
     display: none;
   }
 
+  .lg\:max-h-\[70vh\] {
+    max-height: 70vh;
+  }
+
+  .lg\:max-h-\[60vh\] {
+    max-height: 60vh;
+  }
+
   .lg\:w-\[400px\] {
     width: 400px;
   }
@@ -2468,9 +2620,17 @@ video {
     padding-left: 0px;
     padding-right: 0px;
   }
+
+  .lg\:pt-9 {
+    padding-top: 2.25rem;
+  }
 }
 
 @media (min-width: 1280px) {
+  .xl\:h-\[384px\] {
+    height: 384px;
+  }
+
   .xl\:max-h-\[800px\] {
     max-height: 800px;
   }
@@ -2487,8 +2647,16 @@ video {
     max-height: 80vh;
   }
 
+  .xl\:max-h-\[75vh\] {
+    max-height: 75vh;
+  }
+
   .xl\:w-\[400px\] {
     width: 400px;
+  }
+
+  .xl\:w-\[384px\] {
+    width: 384px;
   }
 
   .xl\:grid-cols-8 {
