--- a/index.njk
+++ b/index.njk
@@ -117,13 +117,13 @@ layout: layouts/base.njk
   <div class="relative overflow-hidden pt-[120px] lg:pt-[190px] 2xl:pt-[200px]">
     
 
-    <div class="relative w-[320px] lg:w-[384px] 2xl:w-[600px] aspect-square mb-[40px] lg:mb-[100px] mx-auto rounded-full bg-gradient-to-r from-white to-white/0">
+    <div class="relative w-[256px] sm:w-[320px] lg:w-[384px] 2xl:w-[600px] aspect-square mb-[40px] lg:mb-[100px] mx-auto rounded-full bg-gradient-to-r from-white to-white/0">
       
     </div>
 
-    <div class="p-6 md:p-8 z-50">
-      <h3 class="max-w-[640px] text-black/50 text-base font-regular leading-snug">
-        <span class="text-black/80 font-medium mr-1">Throughout Journey (2023)</span> is a 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
+    <div class="px-6 md:px-8 mb-10 z-50">
+      <h3 class="max-w-[640px] mx-auto text-black/50 text-base font-regular leading-snug text-justify">
+        Hey there, I am an 35 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
       </h3>
     </div>
 
