--- a/index.njk
+++ b/index.njk
@@ -5,7 +5,7 @@ layout: layouts/base.njk
 
 
 <main data-barba="container" data-barba-namespace="home">
-  <header class="fixed top-0 flex items-center w-full px-6 md:px-8 py-6 z-20">
+  <header class="fixed top-0 flex items-center w-full px-6 md:px-8 pt-6 z-20">
     <div class="hidden lg:block flex-1">
       <ul class="flex items-center gap-5">
         <li class="flex items-center">
@@ -114,10 +114,10 @@ layout: layouts/base.njk
   </div>
   
 
-  <div class="relative overflow-hidden pt-[80px] sm:pt-[90px] lg:pt-[160px] 2xl:pt-[170px]">
+  <div class="relative overflow-hidden pt-[104px] sm:pt-[124px] lg:pt-[144px] xl:pt-[164px] 2xl:pt-[184px]">
     
 
-    <div class="relative w-[256px] sm:w-[320px] lg:w-[384px] 2xl:w-[600px] aspect-square mb-[60px] sm:mb-[80px] lg:mb-[100px] mx-auto rounded-full bg-gradient-to-r from-white to-white/0">
+    <div class="relative w-[256px] sm:w-[320px] lg:w-[384px] 2xl:w-[600px] aspect-square mb-[60px] sm:mb-[80px] lg:mb-[100px] xl:mb-[120px] 2xl:mb-[140px] mx-auto rounded-full bg-gradient-to-r from-white to-white/0">
       
     </div>
 
