--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Design and Development by Jin Su Park
+title: © Selected Works by Jin Su Park
 layout: layouts/base.njk
 ---
 
@@ -32,7 +32,7 @@ layout: layouts/base.njk
     </div>
 
     <div class="hidden lg:block font-medium text-base leading-none text-black/70">
-      The Curious Life of Design and Wonder
+      © Selected Works by Jin Su Park
     </div>
 
 
@@ -121,7 +121,7 @@ layout: layouts/base.njk
       
     </div>
 
-    <div class="px-6 md:px-8 mb-10 z-50">
+    <div class="px-6 md:px-8 mb-12 z-50">
       <h3 class="max-w-[640px] mx-auto text-black/50 text-base font-regular leading-snug text-justify">
         Hey there, I am an 35 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
       </h3>
